Listener endpoint related code cleanup
Fixes: #3104 

* change `KafkaListenerEndpointDescriptor` type to `record` at `KafkaListenerEndpointRegistrar`
* cleanup `KafkaListenerEndpointRegistry`
* change `collect(Collectors.toList())` to `toList()` at `EndpointCustomizerFactory`.
* cleanup `EndpointHandlerMethod`.
* cleanup tests.